--- a/xzshop-service/pom.xml
+++ b/xzshop-service/pom.xml
@@ -23,8 +23,10 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <springfox-version>2.9.2</springfox-version>
-        <mybatisplus.version>3.1.1</mybatisplus.version>
+        <mybatisplus.version>3.3.0</mybatisplus.version>
         <knife4j.version>2.0.2</knife4j.version>
+        <pagehelper-starter.version>1.2.10</pagehelper-starter.version>
+        <pagehelper.version>5.1.8</pagehelper.version>
     </properties>
 
     <dependencies>
@@ -92,7 +94,7 @@
         </dependency>
 
 <!--        <dependency>-->
-<!--            <groupId>com.deepoove</groupId>-->
+        <!--            <groupId>com.deepoove</groupId>-->
 <!--            <artifactId>swagger-dubbo</artifactId>-->
 <!--            <version>2.0.1</version>-->
 <!--        </dependency>-->
@@ -141,6 +143,12 @@
             <version>${mybatisplus.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-extension</artifactId>
+            <version>${mybatisplus.version}</version>
+        </dependency>
+
         <!-- mysql-connector -->
         <dependency>
             <groupId>mysql</groupId>
@@ -159,26 +167,33 @@
 <!--            <artifactId>framework-core</artifactId>-->
 <!--            <version>1.0.0-SNAPSHOT</version>-->
 <!--        </dependency>-->
-<!--        分页相关包-->
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
-            <version> 5.1.8</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper-spring-boot-autoconfigure</artifactId>
-            <version>1.2.10</version>
-        </dependency>
+<!--&lt;!&ndash;        分页相关包&ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.mybatis.spring.boot</groupId>-->
+<!--            <artifactId>mybatis-spring-boot-starter</artifactId>-->
+<!--            <version>2.0.1</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>com.github.pagehelper</groupId>-->
+<!--            <artifactId>pagehelper</artifactId>-->
+<!--            <version> 5.1.8</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>com.github.pagehelper</groupId>-->
+<!--            <artifactId>pagehelper-spring-boot-autoconfigure</artifactId>-->
+<!--            <version>1.2.10</version>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
-            <version>1.2.5</version>
+            <version>${pagehelper-starter.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>${pagehelper.version}</version>
         </dependency>
 
         <!-- mybatis的日志记录 -->
@@ -192,6 +207,14 @@
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version>
+        </dependency>
+
         <dependency>
             <groupId>com.aliyun.oss</groupId>
             <artifactId>aliyun-sdk-oss</artifactId>
@@ -236,6 +259,12 @@
             <groupId>com.cdzg</groupId>
             <artifactId>customer-auth-client</artifactId>
             <version>1.0.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.github.pagehelper</groupId>
+                    <artifactId>pagehelper-spring-boot-starter</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.cdzg</groupId>
@@ -246,12 +275,22 @@
                     <groupId>com.cdzg</groupId>
                     <artifactId>spring-boot-starter-swagger2</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>com.github.pagehelper</groupId>
+                    <artifactId>pagehelper-spring-boot-starter</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
             <groupId>com.cdzg</groupId>
             <artifactId>framework-core</artifactId>
             <version>1.0.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.github.pagehelper</groupId>
+                    <artifactId>pagehelper-spring-boot-starter</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.wuwenze</groupId>
