--- a/xzshop-service/pom.xml
+++ b/xzshop-service/pom.xml
@@ -320,6 +320,13 @@
             <artifactId>geodesy</artifactId>
             <version>1.1.3</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.alipay.sdk/alipay-sdk-java -->
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>3.4.27.ALL</version>
+        </dependency>
     </dependencies>
 
     <!-- 快照库 -->
