--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-parent -->
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.0.RELEASE</version>
+        <version>2.4.0</version>
     </parent>
     <groupId>com.cdzg.xzshop</groupId>
     <artifactId>xzshop-parent</artifactId>
@@ -20,8 +20,8 @@
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Greenwich.SR2</spring-cloud.version>
-        <elasticsearch.version>6.8.12</elasticsearch.version>
-        <spring.data.elasticsearch.version>3.2.0.RELEASE</spring.data.elasticsearch.version>
+        <elasticsearch.version>7.9.3</elasticsearch.version>
+        <spring.data.elasticsearch.version>4.1.0</spring.data.elasticsearch.version>
     </properties>
 
     <dependencyManagement>
