--- a/xzshop-service/src/main/resources/application.properties
+++ b/xzshop-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 app.id=xz-shop
 apollo.meta=http://39.105.196.142:9181
 apollo.bootstrap.enabled = true
-logging.level.com.cdzg.xzshop = debug
+#logging.level.com.cdzg.xzshop = debug
